--- a/LandingPage/DigiDig.css
+++ b/LandingPage/DigiDig.css
@@ -1,4 +1,4 @@
-STYLE CSS PRIMERA PARTE #1:
+
 
 /* Extraido de: https://help.brevo.com/hc/es/articles/7978656575506-Usar-una-fuente-de-Google-Fonts-en-una-página-de-destino#:~:text=Vaya%20a%20https%3A%2F%2Ffonts,en%20su%20página%20de%20destino.&text=Debajo%20de%20la%20sección%20de,CSS%20para%20la%20familia%20específica */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
@@ -149,10 +149,10 @@ footer{
   font-size: 18px;
   font-weight: 400;
 }
-/BENEFICIOS DE LA APP/
+
 #beneficios {
   background-color: #ded7c5;
-  /padding: 50px;
+  padding: 50px;
   text-align: center;
 }
 
