--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -30,6 +30,7 @@ footer{
 #navbar{
 grid-row-start: 1;
 grid-row-end: 2;
+box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 
 }
 main{
@@ -307,13 +308,13 @@ body {
 .container {
   max-width: 900px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 30px;
 }
 
 .faq-section {
   display: flex;
   align-items: center;
-  background-color: #c0b4a5;
+  background-color: #d1c9b8;
   padding: 20px;
   border-radius: 10px;
   margin-bottom: 80px;
