Cambio de color del fondo del banner

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -84,7 +84,7 @@ footer{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #bdce9d;
+  background-color: #c0d19f;
   padding: 50px;
   height: 400px;
 }
