--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -7,7 +7,7 @@ html{
   margin: 0;
   padding: 0;
 }
-/* Este es un comentario en CSS */
+/* Empezamos con el body */
 body {
   min-height: 100%;
   display: grid;
