--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -7,7 +7,7 @@ html{
   margin: 0;
   padding: 0;
 }
-/*Empezamos con el cuerpo de la landing page*/
+/*Empezamos con el cuerpo de la landing page del proyecto*/
 body {
   min-height: 100%;
   display: grid;
